--- a/web2py/applications/blog/views/default/about.html
+++ b/web2py/applications/blog/views/default/about.html
@@ -5,11 +5,11 @@
 <img src="/blog/static/images/itsmej3nnn1.png" width="200" heigth="200"/>
 </div>
 <div class='about'>
-    <strong>{{=T("Mi nombre es:")}} </strong> {{=T("Jennifer Maldonado, alias j3nnn1 dicen por ahí.") }} </br>
-    <strong>{{=T("Mi Cumpleaños: ")}} </strong> {{=T("El día que murio Michel Jackson, evidentemente en diferente año.") }} </br> 
-    <strong>{{=T("Bio: ")}} </strong> {{=T("Una persona común y corriente de un lugar imaginario, en un mundo imaginario, en el cual le gusta aprender, escuchar, y hacer, participo en actividades promoviendo la cultura libre, aficionada a la tecnología, dispuesta a ayudar siempre que se pueda. Este es un espacio para comparar, aprender haciendo, y mostrar un poco sobre como percibo mi mundo.")}} </br> 
+    <strong>{{=T("Mi nombre es:")}} </strong> {{=T("Jennifer Maldonado, alias j3nnn1 dicen por ahí.") }} <br/>
+    <strong>{{=T("Mi Cumpleaños: ")}} </strong> {{=T("El día que murio Michel Jackson, evidentemente en diferente año.") }} <br/> 
+    <strong>{{=T("Bio: ")}} </strong> {{=T("Una persona común y corriente de un lugar imaginario, en un mundo imaginario, en el cual le gusta aprender, escuchar, y hacer, participo en actividades promoviendo la cultura libre, aficionada a la tecnología, dispuesta a ayudar siempre que se pueda. Este es un espacio para comparar, aprender haciendo, y mostrar un poco sobre como percibo mi mundo.")}} <br/> 
     <strong>{{=T("Series favoritas: ")}} </strong> {{=T("HIMYM, HYD, DN, Fringe, Doctor Who, Smallville, TBBT, The I.T. Crowd, Alfred Hitchcock, bleach algún tiempito saco.")}} </br>  
-    <strong>{{=T("twitter, irc: ")}}  </strong> {{=T("@j3nnn1")}} </br> 
-    <strong>{{=T("Peli que me impacto:")}} </strong> {{=T("La cueva de las luciernagas, The godfather")}} </br> 
-    <strong>{{=T("correo: ")}}  </strong> {{=T("j3nnn1 at unefa-glug.org.ve")}} </br> 
+    <strong>{{=T("twitter, irc: ")}}  </strong> {{=T("@j3nnn1")}} <br/> 
+    <strong>{{=T("Peli que me impacto:")}} </strong> {{=T("La cueva de las luciernagas, The godfather")}} <br/> 
+    <strong>{{=T("correo: ")}}  </strong> {{=T("j3nnn1 at unefa-glug.org.ve")}} <br/> 
 </div>
