--- a/web2py/applications/blog/views/default/index.html
+++ b/web2py/applications/blog/views/default/index.html
@@ -1,12 +1,31 @@
 {{extend 'layout.html'}}
-{{#=post}}
+
 {{for post in post:}}
-		<div class='titulo'>
-			<h3> {{=A(post.articulos.titulo, _href=URL("viewpost", args=post.articulos.id))}} </h3>
-		</div>
-		<div class='contenido'> {{=post.articulos.articulo}}</div>
-		<div class='subtitulo'>
-			{{=T("Escrito por: ")}} {{=post.usuarios.usuario}} {{=T("el: ")}} {{=post.articulos.fecha}}
-		</div>
+    <div class="titulo">
+        <h3> {{=A(post.articulos.titulo, _href=URL("viewpost", args=post.articulos.id))}} </h3>
+    </div>
+    <div class="contenido"> {{=post.articulos.articulo}}</div>
+    <div class="subtitulo">
+            {{=T("Escrito por %s el: %s" % (post.usuarios.usuario,post.articulos.fecha))}}
+    </div>
 <hr />
 {{pass}}
+<br />
+<!-- Paginador -->
+{{ if totalpages > 1:}}
+    <div class="pages">
+        Paginas: 
+    {{ for i in range(1, totalpages+1): }}
+        <span class="page">
+            {{ if postpage == i and i>1: }} 
+                <a href="/blog/?page={{=i-1}}">Atras</a>
+                {{ pass }} 
+            {{ else: }}
+                {{ if i < totalpages+1 and postpage != i: }}
+                    <a href="/blog/?page={{=postpage+1}}">Adelante</a>
+                    {{ pass }}
+                {{ pass }}
+        </span>
+        {{ pass }}
+</div>
+{{ pass }}
