--- a/web2py/applications/blog/views/layout.html
+++ b/web2py/applications/blog/views/layout.html
@@ -4,10 +4,10 @@ Design by Free CSS Templates
 http://www.freecsstemplates.org
 Released for free under a Creative Commons Attribution 2.5 License
 
-Name       : chasmogamous
-Description: A two-column, fixed-width template suitable for business sites and blogs.
+Name       : Blogging
+Description: A two-column, fixed-width design for 1024x768 screen resolutions.
 Version    : 1.0
-Released   : 20080116
+Released   : 20090208
 
 -->
 <html xmlns="http://www.w3.org/1999/xhtml">
@@ -15,7 +15,7 @@ Released   : 20080116
   <title>
    {{=response.title or request.application}}
   </title>
-  {{response.files.append(URL(request.application,'static','plugin_layouts/layouts/Chasmogamous/style.css'))}}
+  {{response.files.append(URL(request.application,'static','plugin_layouts/layouts/Blogging/style.css'))}}
 {{response.files.append(URL('static','superfish.js'))}}
   {{include 'web2py_ajax.html'}}
   <style>
@@ -31,102 +31,110 @@ div.error { background-color: red; color: white; padding: 3px; }
   <!-- start header -->
   {{try:}}{{=auth.navbar(action=URL('default','user'))}}{{except:pass}}
 
-  <div id="header">
+  <div id="wrapper">
+   <div id="header">
+    <div id="menu">
+     {{=MENU(response.menu,_class='web2py-menu')}}
+    <script>
+      jQuery(document).ready(function(){jQuery('ul.web2py-menu').superfish({delay:400});});
+    </script>
+    </div>
+    <!-- end #menu -->
+    <div id="search">
+     <form method="get" action="">
+      <fieldset>
+       <input type="text" name="s" id="search-text" size="15" />
+       <input type="submit" id="search-submit" value="Search" />
+      </fieldset>
+     </form>
+    </div>
+    <!-- end #search -->
+   </div>
+   <!-- end #header -->
    <div id="logo">
     <h1>
      {{=response.title or request.application}}
     </h1>
-    <h2>
-     {{=response.subtitle or '=response.subtitle'}}
-    </h2>
+    <p>
+     <em>
+      template design by
+      <a href="#">
+       Expropiada Templates
+      </a>
+     </em>
+    </p>
    </div>
-   <div id="menu">
-    {{=MENU(response.menu,_class='web2py-menu')}}
-    <script>
-      jQuery(document).ready(function(){jQuery('ul.web2py-menu').superfish({delay:400});});
-    </script>
-   </div>
-  </div>
-  <hr />
-  <!-- start page -->
-  <div id="page">
-   <!-- start content -->
-   <div id="content">
-    <div class="flash">{{=response.flash or ''}}</div>
-    {{include}}
-   </div>
-   <!-- end content -->
-   <!-- start sidebar -->
-   <div id="sidebar">
-    <ul>
+   <hr />
+   <!-- end #logo -->
+   <!-- end #header-wrapper -->
+   <div id="page">
+    <div id="content">
+     <div class="flash">{{=response.flash or ''}}</div>
+     {{include}}
+    </div>
+    <!-- end #content -->
+    <div id="sidebar">
+     <ul>
+      <li>
+       <h2> Twitter Busqueda: perl</h2>
+       <p>
+        Mauris vitae nisl nec metus placerat perdiet est. Phasellus dapibus semper urna. Pellentesque ornare, orci in consectetuer hendrerit, volutpat.
+       </p>
+      </li>
+      <li>
+       <h2>
+        Twitter Busqueda: python
+       </h2>
+       <ul>
+        <li>
+         <a href="#">
+         </a>
+         <a href="#">
+          Nec metus sed donec
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          Magna lacus bibendum mauris
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          Velit semper nisi molestie
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          Eget tempor eget nonummy
+         </a>
+        </li>
+        <li>
+         <a href="#">
+          Nec metus sed donec
+         </a>
+        </li>
+       </ul>
+      </li>
+     </ul>
+     <ul>
      <li>
-      <h2>
-       Etiam dolore
-      </h2>
-      <p>
-       Nulla pellentesque dolor non tellus. Duis vel elit sit
-       <a href="#">
-        amet ipsum vehicula
-       </a>
-       varius. Vestibulum ante ipsum primis in faucibus orci luctus.
-      </p>
-     </li>
-     <li>
-      <h2>
-       Consequat lorem
-      </h2>
-      <ul>
-       <li>
-        <a href="#">
-         Proin nec magna nec massa
-        </a>
-       </li>
-       <li>
-        <a href="#">
-         Sit amet purus congue
-        </a>
-       </li>
-       <li>
-        <a href="#">
-         Molestie aliquam erat volutpat
-        </a>
-       </li>
-       <li>
-        <a href="#">
-         Amet ipsum vehicula varius
-        </a>
-       </li>
-       <li>
-        <a href="#">
-         Primis in faucibus orci luctus
-        </a>
-       </li>
-       <li>
-        <a href="#">
-         Vestibulum ante ipsum
-        </a>
-       </li>
-      </ul>
-     </li>
-    </ul>
+       <h2>
+        Mi Twitter
+       </h2>
+       <p> aca va twitter </p>
+      </li>
+     <ul>
+    </div>
+    <!-- end #sidebar -->
+    <div style="clear: both;">
+     &nbsp;
+    </div>
    </div>
-   <!-- end sidebar -->
-   <div style="clear: both;">
-    &nbsp;
+   <!-- end #page -->
+   <div id="footer">
+    <p> .:B106 d3 j3nnn1:.</p>
    </div>
-  </div>
-  <!-- end page -->
-  <div id="footer">
-   <p class="legal">
-    Copyright (c) 2007 Website Name. All rights reserved.
-   </p>
-   <p class="credit">
-    Designed by
-    <a href="http://www.freecsstemplates.org/">
-     Free CSS Templates
-    </a>
-    .
-   </p>
+   <!-- end #footer -->
   </div>
  </body>
 </html>
