--- a/web2py/applications/blog/views/plugin_layouts/layouts/Chasmogamous.html
+++ b/web2py/applications/blog/views/plugin_layouts/layouts/Chasmogamous.html
@@ -59,6 +59,166 @@ div.error { background-color: red; color: white; padding: 3px; }
    <!-- start sidebar -->
    <div id="sidebar">
     <ul>
+     <li id="calendar">
+      <h2>
+       Calendar
+      </h2>
+      <table summary="Calendar">
+       <caption>
+        November 2007
+       </caption>
+       <thead>
+        <tr>
+         <th abbr="Monday" scope="col" title="Monday">
+          M
+         </th>
+         <th abbr="Tuesday" scope="col" title="Tuesday">
+          T
+         </th>
+         <th abbr="Wednesday" scope="col" title="Wednesday">
+          W
+         </th>
+         <th abbr="Thursday" scope="col" title="Thursday">
+          T
+         </th>
+         <th abbr="Friday" scope="col" title="Friday">
+          F
+         </th>
+         <th abbr="Saturday" scope="col" title="Saturday">
+          S
+         </th>
+         <th abbr="Sunday" scope="col" title="Sunday">
+          S
+         </th>
+        </tr>
+       </thead>
+       <tfoot>
+        <tr>
+         <td abbr="October" colspan="3" id="prev">
+          <a href="http://wordpress.local/?m=200710" title="View posts for October 2007">
+           &laquo; Oct
+          </a>
+         </td>
+         <td class="pad">
+          &nbsp;
+         </td>
+         <td abbr="December" colspan="3" id="next">
+          <a href="http://wordpress.local/?m=200710" title="View posts for December 2007">
+           Dec &raquo;
+          </a>
+         </td>
+        </tr>
+       </tfoot>
+       <tbody>
+        <tr>
+         <td colspan="3" class="pad">
+          &nbsp;
+         </td>
+         <td>
+          1
+         </td>
+         <td>
+          2
+         </td>
+         <td>
+          3
+         </td>
+         <td>
+          4
+         </td>
+        </tr>
+        <tr>
+         <td id="today">
+          5
+         </td>
+         <td>
+          6
+         </td>
+         <td>
+          7
+         </td>
+         <td>
+          8
+         </td>
+         <td>
+          9
+         </td>
+         <td>
+          10
+         </td>
+         <td>
+          11
+         </td>
+        </tr>
+        <tr>
+         <td>
+          12
+         </td>
+         <td>
+          13
+         </td>
+         <td>
+          14
+         </td>
+         <td>
+          15
+         </td>
+         <td>
+          16
+         </td>
+         <td>
+          17
+         </td>
+         <td>
+          18
+         </td>
+        </tr>
+        <tr>
+         <td>
+          19
+         </td>
+         <td>
+          20
+         </td>
+         <td>
+          21
+         </td>
+         <td>
+          22
+         </td>
+         <td>
+          23
+         </td>
+         <td>
+          24
+         </td>
+         <td>
+          25
+         </td>
+        </tr>
+        <tr>
+         <td>
+          26
+         </td>
+         <td>
+          27
+         </td>
+         <td>
+          28
+         </td>
+         <td>
+          29
+         </td>
+         <td>
+          30
+         </td>
+         <td class="pad" colspan="2">
+          &nbsp;
+         </td>
+        </tr>
+       </tbody>
+      </table>
+     </li>
      <li>
       <h2>
        Etiam dolore
