--- a/web2py/applications/blog/views/default/twitterperl.html
+++ b/web2py/applications/blog/views/default/twitterperl.html
@@ -1,5 +1,5 @@
 <div class='twitter'>
-{{search_tweets = tweepy.api.search('perl')}}
+{{search_tweets = tweepy.api.search('@j3nnn1')}}
 <ul>
 {{for tweet in search_tweets[0:2]:}}
    <li> 
