--- a/web2py/applications/blog/views/layout.html
+++ b/web2py/applications/blog/views/layout.html
@@ -76,11 +76,11 @@ div.error { background-color: red; color: white; padding: 3px; }
     <div id="sidebar">
      <ul>
          <li>
-            <h2> Mi Twitter </h2>
+            <h2> Mi Timeline </h2>
             <p>{{include 'default/twitterme.html'}} </p>
          </li>
          <li>
-            <h2> Twitter Busqueda: perl</h2>
+            <h2> Menciones en Twitter </h2>
             <p> {{include './default/twitterperl.html'}} </p>
          </li>
 
