--- a/web2py/applications/blog/views/default/deletepost.html
+++ b/web2py/applications/blog/views/default/deletepost.html
@@ -5,7 +5,8 @@
         <li> {{=H3(A(T("Crear nuevo artículo"), _class='link', _href='createpost'), _class='title')}} </li>
     <li> {{=H3(A(T("Modificar o Eliminar artículo"), _class='link'), _class='title')}}</li>
     </ul>
-<table class='adminpost' border='1' align='center'>
+<div id='adminpost'>
+<table>
 <tr>
     <th>
     {{=T("Título")}}
@@ -13,7 +14,7 @@
     <th>
     {{=T("Fecha de Creación")}}
     </th>
-    <th colspan=2>
+    <th colspan=2 align='center'>
     {{=T("Acciones")}}
     </th>
 </tr>
@@ -34,4 +35,5 @@
 {{pass}}
     </tr>
 </table>
+</div>
 </div>
