--- a/web2py/applications/blog/views/default/index.html
+++ b/web2py/applications/blog/views/default/index.html
@@ -1,16 +1,22 @@
 {{extend 'layout.html'}}
 <div class="content">
 {{x=0}}
-{{recorta = lambda x,y: A(' '.join(x[:30])+' Leer mas...',_href=URL("viewpost",args=y)) }}
-{{read_more = lambda x,y: len(x.split()) < 30 and x or recorta(x.split(),y) }}
+
 {{if not post:}}
    {{=DIV(H2(T(" No existen Artículos"), _class='title'), _class='post')}}
 {{pass}}
 {{for p in post:}}
     <div class="post">
         {{=H3(A(p.articulos.titulo, _href=URL("viewpost", args=p.articulos.id)), _class='title')}} 
-        <div class="entry"> {{=read_more(p.articulos.articulo,p.articulos.id)}}</div>
-            {{=A(T("Escrito por %s el: %s Comentarios(%s)" % (p.auth_user.first_name,p.articulos.fecha,comments[x])), _class='meta')}}
+        <div class="entry"> 
+            {{articulos_palabras = p.articulos.articulo.split()}}
+            {{if len(articulos_palabras) > 30:}}
+                {{=XML(' '.join(articulos_palabras[:30]))}} {{=A('Leer más...',_href=URL('viewpost',args=p.articulos.id))}}
+            {{else:}}
+                {{=XML(p.articulos.articulo)}}
+            {{pass}}
+        </div>
+        {{=A(T("Escrito por %s el: %s Comentarios(%s)" % (p.auth_user.first_name,p.articulos.fecha,comments[x])), _class='meta')}}
     </div>
 <hr />
 {{x=x+1}}
@@ -35,4 +41,3 @@
 {{ pass }}
 </div>
 </div>
-
