--- a/web2py/applications/blog/views/default/viewpost.html
+++ b/web2py/applications/blog/views/default/viewpost.html
@@ -10,7 +10,7 @@
     <div class='entry'>
 	<p>{{=post.articulos.articulo}} </p>
     </div>
-    {{=A(T("Escrito por: %s  el %s" % (post.usuarios.usuario, post.articulos.fecha)), _class='meta')}}
+    {{=A(T("Escrito por: %s  el %s" % (post.auth_user.first_name, post.articulos.fecha)), _class='meta')}}
     <div class='entry'>
     {{if comments:}}
 	{{ for comment in comments: }}
