--- a/web2py/applications/blog/views/layout.html
+++ b/web2py/applications/blog/views/layout.html
@@ -56,11 +56,7 @@ div.error { background-color: red; color: white; padding: 3px; }
      {{=response.title or request.application}}
     </h1>
     <p>
-     <em>
-      template design by
-      <a href="#">
-       Expropiada Templates
-      </a>
+     <em>{{=A('J3nnn1', _href=URL(a='blog', c='default', f='index'))}}
      </em>
     </p>
    </div>
