--- a/web2py/applications/blog/views/default/admin.html
+++ b/web2py/applications/blog/views/default/admin.html
@@ -1,9 +1,10 @@
 {{extend 'layout.html'}} 
 <div class='content' align='center'>
-{{=DIV(H2(T("Organizando Peroles."), _class='title'), _align='center')}}
+{{=DIV(H2(T("Administrando Artículos."), _class='title'), _align='center')}}
     <ul>
         <li> {{=H3(A(T("Crear nuevo artículo"), _class='link', _href='createpost'), _class='title')}} </li>
         <li> {{=H3(A(T("Gestionar Comentarios"), _class='link', _href='grantcomment'), _class='title')}} </li>
+	<li> {{=H3(A(T("Administrar Base de Dato"), _class='link', _href=URL(a='blog', c='appadmin', f='index')), _class='title')}}</li>
 	<li> {{=H3(A(T("Modificar o Eliminar artículo"), _class='link'), _class='title')}}</li>
     </ul>
 
