modificando modelo para tweepy

--- a/web2py/applications/blog/views/default/admin.html
+++ b/web2py/applications/blog/views/default/admin.html
@@ -6,6 +6,7 @@
         <li> {{=H3(A(T("Gestionar Comentarios"), _class='link', _href='grantcomment'), _class='title')}} </li>
 	<li> {{=H3(A(T("Administrar Base de Dato"), _class='link', _href=URL(a='blog', c='appadmin', f='index')), _class='title')}}</li>
 	<li> {{=H3(A(T("Modificar o Eliminar artículo"), _class='link'), _class='title')}}</li>
+	<li> {{=H3(A(T("Activar Cuenta de Twitter"), _class='link', _href=URL(a='blog, c='default', f='twitterauth')), _class='title')}}</li>
     </ul>
 
 {{if not tableart:}}
