--- a/web2py/applications/blog/views/layout.html
+++ b/web2py/applications/blog/views/layout.html
@@ -30,7 +30,6 @@ div.error { background-color: red; color: white; padding: 3px; }
  <body>
   <!-- start header -->
   {{try:}}{{=auth.navbar(action=URL('default','user'))}}{{except:pass}}
-  {{import tweepy}}
   <div id="wrapper">
    <div id="header">
     <div id="menu">
@@ -73,16 +72,16 @@ div.error { background-color: red; color: white; padding: 3px; }
      <ul>
          <li>
             <h2> Mi Timeline </h2>
-            <p>{{include 'default/twitterme.html'}} </p>
+            <p>{{#include 'default/twitterme.html'}} </p>
          </li>
          <li>
             <h2> Menciones en Twitter </h2>
-            <p> {{include './default/twitterperl.html'}} </p>
+            <p> {{#include './default/twitterperl.html'}} </p>
          </li>
 
          <li>
             <h2> Twitter Busqueda: python </h2>
-	    <p> {{include 'default/twitterpython.html'}} </p>
+	    <p> {{#include 'default/twitterpython.html'}} </p>
          </li>
      </ul>
     </div>
