--- a/web2py/applications/blog/views/layout.html
+++ b/web2py/applications/blog/views/layout.html
@@ -72,16 +72,11 @@ div.error { background-color: red; color: white; padding: 3px; }
      <ul>
          <li>
             <h2> Mi Timeline </h2>
-            <p>{{#include 'default/twitterme.html'}} </p>
+            <p>{{include './default/twitterme.html'}} </p>
          </li>
          <li>
-            <h2> Menciones en Twitter </h2>
+            <h2> Etiquetas </h2>
             <p> {{#include './default/twitterperl.html'}} </p>
-         </li>
-
-         <li>
-            <h2> Twitter Busqueda: python </h2>
-	    <p> {{#include 'default/twitterpython.html'}} </p>
          </li>
      </ul>
     </div>
