--- a/web2py/applications/blog/views/default/index.html
+++ b/web2py/applications/blog/views/default/index.html
@@ -1,10 +1,9 @@
 {{extend 'layout.html'}}
 <div class="content">
-{{x=0}}
 {{if not post:}}
    {{=DIV(H2(T(" No existen Artículos"), _class='title'), _class='post')}}
 {{pass}}
-{{for p in post:}}
+{{for x,p in enumerate(post):}}
     <div class="post">
         {{=H3(A(p.articulos.titulo, _href=URL("viewpost", args=p.articulos.id)), _class='title')}} 
         <div class="entry"> 
@@ -15,10 +14,12 @@
                 {{=XML(p.articulos.articulo)}}
             {{pass}}
         </div>
+        {{tags = etiquetas[x].as_list()}}
+        {{eti = [tag['nombre'] for tag in tags]}}
+        <p>Etiquetas: {{=' '.join(eti)}}</p> 
         {{=A(T("Escrito por %s el: %s Comentarios(%s)" % (p.auth_user.first_name,p.articulos.fecha.strftime('%d de %B del %Y'),comments[x])), _class='meta')}}
     </div>
 <hr />
-{{x=x+1}}
 {{pass}}
 <br />
 <!-- Paginador -->
