Adding tag features, distinct isn't working as expected yet

--- a/web2py/applications/blog/views/layout.html
+++ b/web2py/applications/blog/views/layout.html
@@ -72,11 +72,11 @@ div.error { background-color: red; color: white; padding: 3px; }
      <ul>
          <li>
             <h2> Mi Timeline </h2>
-            <p>{{include './default/twitterme.html'}} </p>
+            <p>{{#include './default/twitterme.html'}} </p>
          </li>
          <li>
             <h2> Etiquetas </h2>
-            <p> {{#include './default/twitterperl.html'}} </p>
+            <p> {{include './default/tags.html'}} </p>
          </li>
      </ul>
     </div>
