se añadio blocks, modificar comentario completo con etiquetas

--- a/web2py/applications/blog/views/default/about.html
+++ b/web2py/applications/blog/views/default/about.html
@@ -1,5 +1,8 @@
 {{extend 'layout.html'}}
 
+{{block sidebartags}}
+        Not Default block
+{{end}}
 <div class='content'>
 <div class='post'>
      {{=H3(T("It's me: j3nnn1"), _class="title")}}
