--- a/web2py/applications/blog/views/default/admin.html
+++ b/web2py/applications/blog/views/default/admin.html
@@ -1,4 +1,9 @@
 {{extend 'layout.html'}} 
+
+{{block sidebartags}}
+	Not Default block
+{{end}}
+
 <div class='content' align='center'>
 {{=DIV(H2(T("Administrando Artículos."), _class='title'), _align='center')}}
     <ul>
