--- a/web2py/applications/blog/views/default/createpost.html
+++ b/web2py/applications/blog/views/default/createpost.html
@@ -1,5 +1,9 @@
 {{extend 'layout.html'}}
 
+{{block sidebartags}}
+        Not Default block
+{{end}}
+
 {{=DIV(H2(T("Crear nuevo artículo"), _class='title'), _align='center')}}
 <br/>
 <br/>
