--- a/web2py/applications/blog/views/default/deletepost.html
+++ b/web2py/applications/blog/views/default/deletepost.html
@@ -1,4 +1,9 @@
 {{extend 'layout.html'}}
+
+{{block sidebartags}}
+        Not Default block
+{{end}}
+
 <div class='content'>
 {{=DIV(H2(T("Organizando Peroles."), _class='title'), _align='center')}}
     <ul>
