--- a/web2py/applications/blog/views/default/grantcomment.html
+++ b/web2py/applications/blog/views/default/grantcomment.html
@@ -1,4 +1,9 @@
 {{extend 'layout.html'}} 
+
+{{block sidebartags}}
+        Not Default block
+{{end}}
+
 <div class='content' align='center'>
 {{=DIV(H2(T("Aprobar comentarios."), _class='title'), _align='center')}}
 <br/>
