--- a/web2py/applications/blog/views/default/modifypost.html
+++ b/web2py/applications/blog/views/default/modifypost.html
@@ -1,4 +1,9 @@
 {{extend 'layout.html'}} 
+
+{{block sidebartags}}
+        Not Default block
+{{end}}
+
 <div class='content'>
 {{=DIV(H2(T("Modificar artículo"), _class='title'), _align='center')}}
 <br/>
