sin etiquetas en appadmin.html

--- a/web2py/applications/blog/views/appadmin.html
+++ b/web2py/applications/blog/views/appadmin.html
@@ -1,4 +1,8 @@
 {{extend 'layout.html'}}
+
+{{block sidebartags}}
+	Not default
+{{end}} 
 <script><!--
 jQuery(document).ready(function(){
   jQuery("table.sortable tbody tr").mouseover( function() {
