--- a/web2py/applications/blog/views/default/about.html
+++ b/web2py/applications/blog/views/default/about.html
@@ -7,7 +7,7 @@
 <div class='post'>
      {{=H3(T("It's me: j3nnn1"), _class="title")}}
      <div class='itsme'>
-        <img src="/blog/static/images/itsmej3nnn1.png" width="200" heigth="200"/>
+        <img src="/blog/static/images/jenni.jpg" width="200" heigth="200"/>
      </div>
 
      <div class='about'>
